Inspect source code for mistakes (#376)
* IDE driven mistakes and improvements in the source code