@@ -45,7 +45,6 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
 
 import org.joda.beans.Bean;
 import org.joda.beans.BeanBuilder;
@@ -130,7 +129,7 @@ public final class JodaBeanTests {
         MetaBean metaBean = bean1.metaBean();
         List<MetaProperty<?>> buildableProps = metaBean.metaPropertyMap().values().stream()
                 .filter(mp -> mp.style().isBuildable())
-                .collect(Collectors.toList());
+                .toList();
         Set<Bean> builtBeansSet = new HashSet<>();
         builtBeansSet.add(bean1);
         builtBeansSet.add(bean2);
@@ -178,8 +177,8 @@ public final class JodaBeanTests {
             assertEquals(metaBean.metaProperty(mp.name()), mp);
             // Ensure we don't use interned value
             assertEquals(metaBean.metaProperty(new String(mp.name())), mp);
-            assertEquals(metaPropMap.values().contains(mp), true);
-            assertEquals(metaPropMap.keySet().contains(mp.name()), true);
+            assertEquals(metaPropMap.containsValue(mp), true);
+            assertEquals(metaPropMap.containsKey(mp.name()), true);
             if (mp.style().isReadable()) {
                 ignoreThrows(() -> mp.get(bean));
             } else {
@@ -222,9 +221,6 @@ public final class JodaBeanTests {
         ignoreThrows(() -> metaBean.builder().set(fakeMetaProp, JodaBeanTests.TEST_COVERAGE_STRING));
         ignoreThrows(() -> metaBean.builder().set(JodaBeanTests.TEST_COVERAGE_PROPERTY, JodaBeanTests.TEST_COVERAGE_STRING));
         ignoreThrows(() -> bean.property(JodaBeanTests.TEST_COVERAGE_PROPERTY));
-    }
-
-    private static void assertNotNull(Map<String, MetaProperty<?>> metaPropMap) {
     }
 
     // cover parts of a bean that are not property-based
@@ -297,7 +293,7 @@ public final class JodaBeanTests {
         // this will normally trigger each of the possible branches in equals
         List<MetaProperty<?>> buildableProps = bean.metaBean().metaPropertyMap().values().stream()
                 .filter(mp -> mp.style().isBuildable())
-                .collect(Collectors.toList());
+                .toList();
         for (int i = 0; i < buildableProps.size(); i++) {
             try {
                 BeanBuilder<? extends Bean> bld = bean.metaBean().builder();
@@ -370,7 +366,7 @@ public final class JodaBeanTests {
                     Modifier.isPublic(field.getModifiers()) &&
                     Modifier.isStatic(field.getModifiers()) &&
                     Modifier.isFinal(field.getModifiers()) &&
-                    field.isSynthetic() == false) {
+                    !field.isSynthetic()) {
                 ignoreThrows(() -> samples.add(field.get(null)));
             }
         }
@@ -380,73 +376,71 @@ public final class JodaBeanTests {
     private static final Map<Class<?>, List<?>> SAMPLES;
     static {
         Map<Class<?>, List<?>> map = new HashMap<>();
-        map.put(String.class, Arrays.asList("Hello", "Goodbye", " ", ""));
-        map.put(Byte.class, Arrays.asList((byte) 0, (byte) 1));
-        map.put(Byte.TYPE, Arrays.asList((byte) 0, (byte) 1));
-        map.put(Short.class, Arrays.asList((short) 0, (short) 1));
-        map.put(Short.TYPE, Arrays.asList((short) 0, (short) 1));
-        map.put(Integer.class, Arrays.asList((int) 0, (int) 1));
-        map.put(Integer.TYPE, Arrays.asList((int) 0, (int) 1));
-        map.put(Long.class, Arrays.asList((long) 0, (long) 1));
-        map.put(Long.TYPE, Arrays.asList((long) 0, (long) 1));
-        map.put(Float.class, Arrays.asList((float) 0, (float) 1));
-        map.put(Float.TYPE, Arrays.asList((float) 0, (float) 1));
-        map.put(Double.class, Arrays.asList((double) 0, (double) 1));
-        map.put(Double.TYPE, Arrays.asList((double) 0, (double) 1));
-        map.put(Character.class, Arrays.asList(' ', 'A', 'z'));
-        map.put(Character.TYPE, Arrays.asList(' ', 'A', 'z'));
-        map.put(Boolean.class, Arrays.asList(Boolean.TRUE, Boolean.FALSE));
-        map.put(Boolean.TYPE, Arrays.asList(Boolean.TRUE, Boolean.FALSE));
-        map.put(LocalDate.class, Arrays.asList(LocalDate.now(ZoneOffset.UTC), LocalDate.of(2012, 6, 30)));
-        map.put(LocalTime.class, Arrays.asList(LocalTime.now(ZoneOffset.UTC), LocalTime.of(11, 30)));
-        map.put(LocalDateTime.class,
-                Arrays.asList(LocalDateTime.now(ZoneOffset.UTC), LocalDateTime.of(2012, 6, 30, 11, 30)));
-        map.put(OffsetTime.class, Arrays.asList(
-                OffsetTime.now(ZoneOffset.UTC), OffsetTime.of(11, 30, 0, 0, ZoneOffset.ofHours(1))));
-        map.put(OffsetDateTime.class, Arrays.asList(
+        map.put(String.class, List.of("Hello", "Goodbye", " ", ""));
+        map.put(Byte.class, List.of((byte) 0, (byte) 1));
+        map.put(Byte.TYPE, List.of((byte) 0, (byte) 1));
+        map.put(Short.class, List.of((short) 0, (short) 1));
+        map.put(Short.TYPE, List.of((short) 0, (short) 1));
+        map.put(Integer.class, List.of(0, 1));
+        map.put(Integer.TYPE, List.of(0, 1));
+        map.put(Long.class, List.of((long) 0, (long) 1));
+        map.put(Long.TYPE, List.of((long) 0, (long) 1));
+        map.put(Float.class, List.of((float) 0, (float) 1));
+        map.put(Float.TYPE, List.of((float) 0, (float) 1));
+        map.put(Double.class, List.of((double) 0, (double) 1));
+        map.put(Double.TYPE, List.of((double) 0, (double) 1));
+        map.put(Character.class, List.of(' ', 'A', 'z'));
+        map.put(Character.TYPE, List.of(' ', 'A', 'z'));
+        map.put(Boolean.class, List.of(Boolean.TRUE, Boolean.FALSE));
+        map.put(Boolean.TYPE, List.of(Boolean.TRUE, Boolean.FALSE));
+        map.put(LocalDate.class, List.of(LocalDate.now(ZoneOffset.UTC), LocalDate.of(2012, 6, 30)));
+        map.put(LocalTime.class, List.of(LocalTime.now(ZoneOffset.UTC), LocalTime.of(11, 30)));
+        map.put(LocalDateTime.class, List.of(LocalDateTime.now(ZoneOffset.UTC), LocalDateTime.of(2012, 6, 30, 11, 30)));
+        map.put(OffsetTime.class, List.of(OffsetTime.now(ZoneOffset.UTC), OffsetTime.of(11, 30, 0, 0, ZoneOffset.ofHours(1))));
+        map.put(OffsetDateTime.class, List.of(
                 OffsetDateTime.now(ZoneOffset.UTC),
                 OffsetDateTime.of(2012, 6, 30, 11, 30, 0, 0, ZoneOffset.ofHours(1))));
-        map.put(ZonedDateTime.class, Arrays.asList(
+        map.put(ZonedDateTime.class, List.of(
                 ZonedDateTime.now(ZoneOffset.UTC),
                 ZonedDateTime.of(2012, 6, 30, 11, 30, 0, 0, ZoneId.systemDefault())));
-        map.put(Instant.class, Arrays.asList(Instant.now(), Instant.EPOCH));
-        map.put(Year.class, Arrays.asList(Year.now(ZoneOffset.UTC), Year.of(2012)));
-        map.put(YearMonth.class, Arrays.asList(YearMonth.now(ZoneOffset.UTC), YearMonth.of(2012, 6)));
-        map.put(MonthDay.class, Arrays.asList(MonthDay.now(ZoneOffset.UTC), MonthDay.of(12, 25)));
-        map.put(Month.class, Arrays.asList(Month.JULY, Month.DECEMBER));
-        map.put(DayOfWeek.class, Arrays.asList(DayOfWeek.FRIDAY, DayOfWeek.SATURDAY));
-        map.put(URI.class, Arrays.asList(URI.create("http://www.opengamma.com"), URI.create("http://www.joda.org")));
-        map.put(Class.class, Arrays.asList(Throwable.class, RuntimeException.class, String.class));
-        map.put(Object.class, Arrays.asList("", 6));
-        map.put(Collection.class, Arrays.asList(new ArrayList<>()));
-        map.put(List.class, Arrays.asList(new ArrayList<>()));
-        map.put(Set.class, Arrays.asList(new HashSet<>()));
-        map.put(SortedSet.class, Arrays.asList(new TreeSet<>()));
+        map.put(Instant.class, List.of(Instant.now(), Instant.EPOCH));
+        map.put(Year.class, List.of(Year.now(ZoneOffset.UTC), Year.of(2012)));
+        map.put(YearMonth.class, List.of(YearMonth.now(ZoneOffset.UTC), YearMonth.of(2012, 6)));
+        map.put(MonthDay.class, List.of(MonthDay.now(ZoneOffset.UTC), MonthDay.of(12, 25)));
+        map.put(Month.class, List.of(Month.JULY, Month.DECEMBER));
+        map.put(DayOfWeek.class, List.of(DayOfWeek.FRIDAY, DayOfWeek.SATURDAY));
+        map.put(URI.class, List.of(URI.create("http://www.opengamma.com"), URI.create("http://www.joda.org")));
+        map.put(Class.class, List.of(Throwable.class, RuntimeException.class, String.class));
+        map.put(Object.class, List.of("", 6));
+        map.put(Collection.class, List.of(new ArrayList<>()));
+        map.put(List.class, List.of(new ArrayList<>()));
+        map.put(Set.class, List.of(new HashSet<>()));
+        map.put(SortedSet.class, List.of(new TreeSet<>()));
         try {
             Class<?> cls = Class.forName("com.google.common.collect.ImmutableList");
             Method method = cls.getDeclaredMethod("of");
-            map.put(cls, Arrays.asList(method.invoke(null)));
+            map.put(cls, List.of(method.invoke(null)));
         } catch (Exception ex) {
             // ignore
         }
         try {
             Class<?> cls = Class.forName("com.google.common.collect.ImmutableSet");
             Method method = cls.getDeclaredMethod("of");
-            map.put(cls, Arrays.asList(method.invoke(null)));
+            map.put(cls, List.of(method.invoke(null)));
         } catch (Exception ex) {
             // ignore
         }
         try {
             Class<?> cls = Class.forName("com.google.common.collect.ImmutableSortedSet");
             Method method = cls.getDeclaredMethod("naturalOrder");
-            map.put(cls, Arrays.asList(method.invoke(null)));
+            map.put(cls, List.of(method.invoke(null)));
         } catch (Exception ex) {
             // ignore
         }
         try {
             Class<?> cls = Class.forName("com.google.common.collect.ImmutableMap");
             Method method = cls.getDeclaredMethod("of");
-            map.put(cls, Arrays.asList(method.invoke(null)));
+            map.put(cls, List.of(method.invoke(null)));
         } catch (Exception ex) {
             // ignore
         }
